; ModuleID = '/home/carl/AnghaBench/git/extr_tree-diff.c_diff_might_be_rename.c'
source_filename = "/home/carl/AnghaBench/git/extr_tree-diff.c_diff_might_be_rename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, %struct.TYPE_3__** }
%struct.TYPE_3__ = type { i32 }

@diff_queued_diff = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @diff_might_be_rename to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @diff_might_be_rename() #0 {
  %1 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @diff_queued_diff, i32 0, i32 0), align 8
  %2 = icmp eq i32 %1, 1
  br i1 %2, label %3, label %12

3:                                                ; preds = %0
  %4 = load %struct.TYPE_3__**, %struct.TYPE_3__*** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @diff_queued_diff, i32 0, i32 1), align 8
  %5 = getelementptr inbounds %struct.TYPE_3__*, %struct.TYPE_3__** %4, i64 0
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @DIFF_FILE_VALID(i32 %8)
  %10 = icmp ne i32 %9, 0
  %11 = xor i1 %10, true
  br label %12

12:                                               ; preds = %3, %0
  %13 = phi i1 [ false, %0 ], [ %11, %3 ]
  %14 = zext i1 %13 to i32
  ret i32 %14
}

declare dso_local i32 @DIFF_FILE_VALID(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
